Agregar codigo css para que la primera pagina quede con buen diseño y estilo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador</title>
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header class="encabezado_inicial">
@@ -12,8 +13,8 @@
     <main class="cuerpo">
         <section class="cuerpo_seccion_entrada">
             <div class="cuerpo_seccion_entrada_ingreso">
-                <input type="text" placeholder="Ingrese el texto aqui">
-                <p>Solo letras minúsculas y sin acentos</p>
+                <input type="text" placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto">
+                <p><img src="./assets/Vector.png">Solo letras minúsculas y sin acentos</p>
             </div>
             <div class="cuerpo_seccion_entrada_boton">
                 <button>Encriptar</button>
@@ -21,11 +22,11 @@
             </div>
         </section>
         <section class="cuerpo_seccion_salida">
-            <div>
+            <div class="cuerpo_seccion_salida_div">
                 <h1>Ningún mensaje fue encontrado</h1>
-                <p>Ingresa el texto que desees encriptar o desencriptar.</p>
-                <img src="./assets/Muñeco.png">
+                <p>el texto que desees encriptar o desencriptar.</p>
             </div>
+            <img src="./assets/Muñeco.png">
         </section>
         
     </main>
