--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     </header>
     <main class="cuerpo">
         <section class="cuerpo_seccion_entrada">
-            <div class="cuerpo_seccion_entrada_ingreso">
-                <textarea placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto"></textarea>
-            </div>
+            <textarea placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto"></textarea>
             <div class="cuerpo_seccion_entrada_boton">
-                <p class="cuerpo_texto_vector"><img src="./assets/Vector.png" class="cuerpo_seccion_entrada_vector">Solo letras minúsculas y sin acentos</p>
+                <p class="cuerpo_texto_vector"><img src="./assets/Vector.png">Solo letras minúsculas y sin acentos</p>
                 <div class="cuerpo_botones">
                     <button class="boton_encriptar">Encriptar</button>
                     <button class="boton_desencriptar">Desencriptar</button>
@@ -25,14 +23,15 @@
         </section>
         <section class="cuerpo_seccion_salida">
             <div class="cuerpo_seccion_salida_div">
-                <h1>Ningún mensaje fue <br>encontrado</h1>
-                <p>El texto que desees encriptar o <br>desencriptar.</p>
+                <h1>Ningún mensaje fue encontrado</h1>
+                <p>El texto que desees encriptar o desencriptar.</p>
             </div>
             <img src="./assets/Muñeco.png" class="cuerpo_imagen_muneco">
         </section>
         
     </main>
     <footer class="encabezado_final">
+        <p>Desarrollado por <a href="https://github.com/LilJuanxxo666">LilJuanxxo666</a></p>
     </footer>
 </body>
 </html>
