--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </header>
     <main class="cuerpo">
         <section class="cuerpo_seccion_entrada">
-            <textarea placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto"></textarea>
+            <textarea placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto" id="texto_ingresado"></textarea>
             <div class="cuerpo_seccion_entrada_boton">
                 <p class="cuerpo_texto_vector"><img src="./assets/Vector.png" alt="vector de advertencia">Solo letras minúsculas y sin acentos</p>
                 <div class="cuerpo_botones">
-                    <button class="boton_encriptar">Encriptar</button>
-                    <button class="boton_desencriptar">Desencriptar</button>
+                    <button id="btn_encriptar" class="boton_encriptar">Encriptar</button>
+                    <button id="btn_desencriptar" class="boton_desencriptar">Desencriptar</button>
                 </div>
             </div>
         </section>
