Ultima versión totalmente funcional

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="cuerpo">
         <section class="cuerpo_seccion_entrada">
-            <textarea placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto" id="texto_ingresado"></textarea>
+            <textarea placeholder="Ingrese el texto aquí" class="cuerpo_ingresar_texto" id="texto_ingresado" autocapitalize="none"></textarea>
             <div class="cuerpo_seccion_entrada_boton">
                 <p class="cuerpo_texto_vector"><img src="./assets/Vector.png" alt="vector de advertencia">Solo letras minúsculas y sin acentos</p>
                 <div class="cuerpo_botones">
